substitute deprecqted method to load class with name